examples/bad/ERROR_OCCURS_CHECK_INFINITE_TYPE/infinite_function_type.st
language core;
extend with #type-reconstruction;

fn main(f : auto) -> auto {
    return f(f)
}


//ERROR_OCCURS_CHECK_INFINITE_TYPE
